Work around an arm64_32 LLVM miscompile bug https://bugs.webkit.org/show_bug.cgi?id=196788

Reviewed by Yusuke Suzuki.

* runtime/CachedTypes.cpp:



Canonical link: https://commits.webkit.org/211079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244163 268f45cc-cd09-0410-ab3c-d52691b4dbfc